--- a/Szamologep.html
+++ b/Szamologep.html
@@ -7,7 +7,20 @@
 </head>
 <body>
 
-<h1>Szamologep</h1>
+<h1>Számológép</h1>
+
+<div>Kérem az első számot:</div>
+<input type="number" name="elso" id="elso">
+<div>Kérem a második számot:</div>
+<input type="number" name="masodik" id="masodik"> <br>
+<button onclick="plusz()" id="plusz" type="submit">+</button>
+<button onclick="minusz()" id="minusz" type="submit">-</button>
+<button onclick="szor()" id="szor" type="submit">*</button>
+<button onclick="oszt()" id="oszt" type="submit">/</button>
+
+<h1>Eredmény:</h1>
+
+<h1 id="Eredmeny">8</h1>
 
 </body>
 </html>
