--- a/Szamologep.html
+++ b/Szamologep.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 <head>
+
 <script src="script.js"></script>
 <link rel="stylesheet" href="styles.css">
-<title>Szamologep</title>
+<title>Számológép</title>
 </head>
 <body>
 
